log
Thu 09 May 2024 12:57:09 AM UTC: 
 tests:  1|8
total_score: 0/70
e1dae7e
Thu 09 May 2024 01:14:58 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2794096
Thu 09 May 2024 02:02:52 AM UTC: 
 treemap.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 68 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
129182f
Thu 09 May 2024 02:03:16 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
7194296
Thu 09 May 2024 02:56:54 AM UTC: 
 treemap.c | 125 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 116 insertions(+), 9 deletions(-)
 tests:  12|6
total_score: 15/70
5a3396f
Thu 09 May 2024 03:03:44 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
b86195c
Thu 09 May 2024 03:04:39 AM UTC: 
 treemap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  12|6
total_score: 15/70
572bdd4
Thu 09 May 2024 03:17:56 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|4
total_score: 40/70
5f278c7
Thu 09 May 2024 03:18:56 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 50/70
c353d44
Thu 09 May 2024 03:29:09 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  20|3
total_score: 50/70
bd92988
Thu 09 May 2024 03:33:44 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
a96a8a7
Thu 09 May 2024 03:36:10 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
d5564f1
Thu 09 May 2024 03:40:14 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  22|2
total_score: 50/70
73ebea3
Thu 09 May 2024 03:53:35 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
ebfb5ef
Thu 09 May 2024 03:55:28 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
1158c8d
Thu 09 May 2024 04:04:19 AM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  22|2
total_score: 50/70
5fa6948
Thu 09 May 2024 04:05:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 55/70
d9765aa
Thu 09 May 2024 04:06:30 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 50/70
3a13a5d
Thu 09 May 2024 04:06:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 55/70
62de3f7
Thu 09 May 2024 04:21:15 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
4638434
Thu 09 May 2024 04:24:30 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 55/70
238ff21
Thu 09 May 2024 04:28:31 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  24|2
total_score: 55/70
49350fe
Thu 09 May 2024 04:39:55 AM UTC: 
 treemap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  0|0
84f766e
Thu 09 May 2024 04:49:09 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
b077996
Thu 09 May 2024 04:54:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
0abf82b
